--- a/FRNK Player V3/index_2.html
+++ b/FRNK Player V3/index_2.html
@@ -128,7 +128,7 @@
             <button class="button" id="playButton">Play</button>
             <button class="button" id="rewindButton">Rewind</button>
             <button class="button" id="fastForwardButton">Fast-F</button>
-            <button class="button" id="stopButton">Stop</button>
+            <button class="button" id="stopButton">Stop Reset</button>
         </div>
         <div class="playback-timer-container">
             <select id="playbackSpeedSelector" class="speed-selector">
