--- a/FRNK Player V3/index_3.html
+++ b/FRNK Player V3/index_3.html
@@ -244,7 +244,7 @@
     width: 40px; /* Fixed width for square shape */
     height: 40px; /* Fixed height for square shape */
     padding: 0; /* Remove padding to maintain square dimensions */
-    font-size: 0.75rem; /* Smaller font size to fit within the square */
+    font-size: 0.5rem; /* Smaller font size to fit within the square */
     border: none; /* Remove default button border */
     border-radius: 4px; /* Slightly rounded corners for a neat look */
     cursor: pointer; /* Pointer cursor on hover */
@@ -328,7 +328,7 @@
 
         <div class="effect-button-container">
             <button class="button" id="effect-1-Button">Vinyl Crackle</button>
-            <button class="button" id="effect-2-Button">Tone Wheel</button>
+            <button class="button" id="effect-2-Button">Gramaphone Effect</button>
             <button class="button" id="effect-3-Button">Wow & Flutter</button>
             <button class="button" id="effect-4-Button">Tape Saturation</button>
             <button class="button" id="effect-5-Button">Echo</button>
