--- a/FRNK Player V3/index_4.html
+++ b/FRNK Player V3/index_4.html
@@ -330,6 +330,6 @@
     </div>
   </div>
 
-  <script type="module" src="modules_v2/UIManager.js"></script>
+  <script type="module" src="modules_v2/uiModules/UIManager.js"></script>
 </body>
 </html>
