--- a/FRNK Player V3/index_4.html
+++ b/FRNK Player V3/index_4.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <title>Tape Deck Simulator</title>
   <style>
- 
-
     * {
       box-sizing: border-box;
       margin: 0;
@@ -13,33 +11,130 @@
     }
 
     body {
-      display: flex;
-      flex-direction: column; /* Stack Tape Deck and Controls vertically */
-      justify-content: center;
-      align-items: center;
-      height: 100vh; /* Full viewport height */
+      height: 100vh;
       background-color: #000000;
-      overflow: hidden; /* Prevent scrollbars */
+      overflow: hidden;
+      display: grid;
+      grid-template-columns: 1fr 2fr 1fr;
+      gap: 10px;
     }
 
-    /* Main container splits the viewport into 90% Tape Deck and 10% Controls */
+    /* Left Column (Controls) */
+    .controls-column {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 20px;
+      background: linear-gradient(135deg, #1a1a1a, #333333);
+      border: 2px solid #00ffcc;
+      border-radius: 10px;
+      overflow-y: auto; /* Allow scrolling if many sliders are added */
+    }
+
+    .playback-controls-container {
+      width: 100%;
+      margin-bottom: 20px;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 1em;
+      border-radius: 8px;
+      border: 2px solid #00ffcc;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .playback-controls-container h2 {
+      color: #00ffcc;
+      font-size: 1.5rem;
+      margin-bottom: 10px;
+      text-align: center;
+    }
+
+    .playback-timer-container,
+    .volume-controls-container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 20px;
+    }
+
+    .playback-timer-container {
+      background: rgba(0, 0, 0, 0.5);
+      padding: 0.5em 1em;
+      border-radius: 5px;
+    }
+
+    #timerDisplay {
+      color: white;
+      font-size: 1rem;
+      white-space: nowrap;
+    }
+
+    #playbackSpeedSelector {
+      padding: 0.3em 0.6em;
+      font-size: 1rem;
+      border: none;
+      border-radius: 5px;
+      background: rgba(255, 255, 255, 0.1);
+      color: white;
+      cursor: pointer;
+    }
+
+    .volume-controls-container label {
+      color: #00ffcc;
+      font-size: 1rem;
+      white-space: nowrap;
+    }
+
+    .volume-controls-container input[type="range"] {
+      width: 100%;
+      cursor: pointer;
+    }
+
+    .individual-volume-group {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 20px;
+    }
+
+    .individual-volume-group h3 {
+      color: #00ffcc;
+      font-size: 1.2rem;
+      margin-bottom: 5px;
+      text-align: center;
+    }
+
+    .individual-volume-group .volume-controls-container {
+      justify-content: flex-start;
+    }
+
+    .individual-volume-group .volume-controls-container label {
+      min-width: 120px;
+    }
+
+    /* Center Column (Player) */
     #mainContainer {
       display: flex;
       flex-direction: column;
-      height: 80%;
-      max-width: 400px; /* Optional: Max width to prevent overexpansion on large screens */
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      background: linear-gradient(135deg, #000000, #1a1a1a);
+      border: 2px solid #00ffcc;
+      border-radius: 10px;
     }
 
-    /* Tape Deck Container occupies 90% of the viewport height */
     #container {
       position: relative;
-      flex: 9; /* 90% */
+      width: 100%;
+      height: 80%;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
-    /* Tape Deck Container content */
     #tapeDeckContainer {
       position: relative;
       width: 100%;
@@ -49,7 +144,6 @@
       align-items: center;
     }
 
-    /* Tape Deck Image scales to fit the container while maintaining aspect ratio */
     #tapeDeckImage {
       max-width: 100%;
       max-height: 100%;
@@ -58,7 +152,6 @@
       display: block;
     }
 
-    /* Canvas overlays the tape deck image */
     canvas {
       position: absolute;
       top: 0;
@@ -69,36 +162,34 @@
       z-index: 1;
     }
 
-    /* Button Container positioned at the bottom of the Tape Deck Container */
     .button-container {
       position: absolute;
       bottom: 3.5%;
       left: 50%;
       transform: translateX(-50%);
-      width: 90%; /* Adjust as needed */
+      width: 90%;
       display: flex;
       justify-content: space-around;
       z-index: 2;
     }
 
-    /* Individual Buttons */
     .button {
       flex: 1;
       max-width: 100px;
       max-height: 110px;
-      aspect-ratio: 1 / 1.2; /* Slightly taller button */
+      aspect-ratio: 1 / 1.2;
       background: rgba(85, 85, 85, 0.8);
       color: white;
       border: none;
       border-radius: 3px;
       cursor: pointer;
-      font-size: 1.2vw;
+      font-size: 1vw;
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
       transition: background 0.3s, font-size 0.3s;
-      margin: 0 1px; /* Space between buttons */
+      margin: 0 1px;
     }
 
     .button:hover {
@@ -115,48 +206,78 @@
       cursor: not-allowed;
     }
 
-    /* Controls Container occupies 10% of the viewport height */
-    .controls-container {
-      flex: 1; /* 10% */
+    .effect-button-container {
       display: flex;
+      position: absolute;
+      top: 24%;
+      left: 50%;
+      transform: translateX(-50%);
+      height: auto;
+      width: auto;
       justify-content: center;
       align-items: center;
-      width: 100%;
-      padding: 0 20px; /* Optional: Padding for better spacing */
+      gap: 10px;
+      padding: 10px;
+      background: rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
     }
 
-    /* Playback Timer and Speed Selector */
-    .playback-timer-container {
+    .effect-button-container .button {
+      width: 40px;
+      height: 40px;
+      padding: 0;
+      font-size: 0.5rem;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: background-color 0.3s, transform 0.2s;
+      color: white;
+      font-weight: bold;
       display: flex;
       align-items: center;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 0.5em 1em;
-      border-radius: 5px;
-      z-index: 2;
-      gap: 20px; /* Space between speed selector and timer */
+      justify-content: center;
     }
 
-    #timerDisplay {
-      color: white;
-      font-size: 1.5vw;
-      white-space: nowrap;
-      margin-left: 10px;
+    #effect-1-Button {
+      background-color: blue;
     }
 
-    #playbackSpeedSelector {
-      padding: 0.3em 0.6em;
-      font-size: 1.2vw;
-      border: none;
-      border-radius: 5px;
-      background: rgba(255, 255, 255, 0.1);
-      color: white;
-      cursor: pointer;
+    #effect-2-Button {
+      background-color: orange;
     }
 
-    /* Responsive Design Adjustments */
+    #effect-3-Button {
+      background-color: green;
+    }
+
+    #effect-1-Button:hover {
+      background-color: darkblue;
+    }
+
+    #effect-2-Button:hover {
+      background-color: darkorange;
+    }
+
+    #effect-3-Button:hover {
+      background-color: darkgreen;
+    }
+
+    #effect-1-Button:active,
+    #effect-2-Button:active,
+    #effect-3-Button:active {
+      transform: scale(0.95);
+    }
+
+    /* Right Column (Empty) */
+    .right-column {
+      background: linear-gradient(135deg, #1a1a1a, #333333);
+      border: 2px solid #00ffcc;
+      border-radius: 10px;
+    }
+
+    /* Responsive adjustments */
     @media (max-width: 768px) {
       .button {
-        flex: 0 0 20%;
         font-size: 2vw;
       }
 
@@ -167,27 +288,21 @@
       #playbackSpeedSelector {
         font-size: 2vw;
       }
-
-      .playback-timer-container {
-        gap: 10px;
-        padding: 0.4em 0.8em;
-      }
     }
 
     @media (max-width: 600px) {
-    .effect-button-container .button {
+      .effect-button-container .button {
         width: 30px;
         height: 30px;
         font-size: 0.6rem;
-    }
-    .effect-button-container {
+      }
+      .effect-button-container {
         gap: 5px;
-    }
+      }
     }
 
     @media (max-width: 480px) {
       .button {
-        flex: 0 0 25%;
         font-size: 2.5vw;
       }
 
@@ -204,112 +319,109 @@
         padding: 0.3em 0.6em;
       }
     }
-
-    /* Position each button using left percentages */
-    #recordButton {
-      left: 5%;
-    }
-    #playButton {
-      left: 25%;
-    }
-    #rewindButton {
-      left: 45%;
-    }
-    #fastForwardButton {
-      left: 65%;
-    }
-    #stopButton {
-      left: 85%;
-    }
-
-   /* Effect Button Container Styles */
-    .effect-button-container {
-    display: flex;
-    position: absolute;
-    top: 24%;
-    left: 50%; /* Center the container horizontally */
-    transform: translateX(-50%); /* Adjust for perfect centering */
-    height: auto; /* Allow height to adjust based on content */
-    width: auto; /* Allow width to adjust based on content */
-    justify-content: center; /* Center the buttons horizontally within the container */
-    align-items: center; /* Center the buttons vertically within the container */
-    gap: 10px; /* Reduce spacing between buttons for a compact group */
-    padding: 10px; /* Optional: Add some padding around the button group */
-    background: rgba(0, 0, 0, 0.1); /* Optional: Background for better visibility */
-    border-radius: 8px; /* Optional: Rounded corners for the container */
-    }
-
-    /* Shared Button Styles */
-    .effect-button-container .button {
-    width: 40px; /* Fixed width for square shape */
-    height: 40px; /* Fixed height for square shape */
-    padding: 0; /* Remove padding to maintain square dimensions */
-    font-size: 0.5rem; /* Smaller font size to fit within the square */
-    border: none; /* Remove default button border */
-    border-radius: 4px; /* Slightly rounded corners for a neat look */
-    cursor: pointer; /* Pointer cursor on hover */
-    transition: background-color 0.3s, transform 0.2s; /* Smooth transitions */
-    color: white; /* Text color */
-    font-weight: bold;
-    display: flex; /* Use flex to center text/icon */
-    align-items: center; /* Center vertically */
-    justify-content: center; /* Center horizontally */
-    }
-
-    /* Specific Button Colors */
-    #effect-1-Button {
-    background-color: blue; /* Blue background */
-    }
-
-    #effect-2-Button {
-    background-color: orange; /* Orange background */
-    }
-
-    #effect-3-Button {
-    background-color: green; /* Example color */
-    }
-
-   
-
-    /* Hover Effects */
-    #effect-1-Button:hover {
-    background-color: darkblue; /* Darker blue on hover */
-    }
-
-    #effect-2-Button:hover {
-    background-color: darkorange; /* Darker orange on hover */
-    }
-
-    #effect-3-Button:hover {
-    background-color: darkgreen; /* Darker green on hover */
-    }
-
-
-    /* Active Effects */
-    #effect-1-Button:active,
-    #effect-2-Button:active,
-    #effect-3-Button:active {
-    transform: scale(0.95); /* Slightly shrink on click */
-    }
-
-
   </style>
 </head>
 <body>
+  <!-- Left Column (Controls) -->
+  <div class="controls-column">
+    <div class="playback-controls-container">
+      <h2>Playback Controls</h2>
+      <div class="playback-timer-container">
+        <select id="playbackSpeedSelector" class="speed-selector">
+          <option value="0.8">33 RPM</option>
+          <option value="1" selected>Normal Speed</option>
+          <option value="1.2">45 RPM</option>
+        </select>
+        <div id="timerDisplay">00:00 / 02:36</div>
+      </div>
+      <div class="volume-controls-container">
+        <label for="masterVolumeSlider">Master Volume</label>
+        <input
+          type="range"
+          id="masterVolumeSlider"
+          min="0"
+          max="1"
+          step="0.01"
+          value="1"
+          aria-label="Master Volume Slider"
+        />
+      </div>
+    </div>
+
+    <!-- Individual Effect Volume Controls -->
+    <div class="individual-volume-group">
+      <h3>Individual Volumes</h3>
+
+      <div class="volume-controls-container">
+        <label for="buttonPressVolumeSlider">Button Press Vol</label>
+        <input
+          type="range"
+          id="buttonPressVolumeSlider"
+          min="0"
+          max="1"
+          step="0.01"
+          value="1"
+        />
+      </div>
+      <div class="volume-controls-container">
+        <label for="tapeNoiseVolumeSlider">Tape Noise Vol</label>
+        <input
+          type="range"
+          id="tapeNoiseVolumeSlider"
+          min="0"
+          max="1"
+          step="0.01"
+          value="1"
+        />
+      </div>
+      <div class="volume-controls-container">
+        <label for="crackleVolumeSlider">Crackle Vol</label>
+        <input
+          type="range"
+          id="crackleVolumeSlider"
+          min="0"
+          max="1"
+          step="0.01"
+          value="1"
+        />
+      </div>
+      <div class="volume-controls-container">
+        <label for="gramophoneVolumeSlider">Gramophone Vol</label>
+        <input
+          type="range"
+          id="gramophoneVolumeSlider"
+          min="0"
+          max="1"
+          step="0.01"
+          value="1"
+        />
+      </div>
+      <div class="volume-controls-container">
+        <label for="echoVolumeSlider">Echo Vol</label>
+        <input
+          type="range"
+          id="echoVolumeSlider"
+          min="0"
+          max="1"
+          step="0.01"
+          value="1"
+        />
+      </div>
+    </div>
+  </div>
+
+  <!-- Center Column (Tape Deck Player) -->
   <div id="mainContainer">
     <div id="container">
-
-
-      
       <div id="tapeDeckContainer">
         <img id="tapeDeckImage" src="./assets/tapeDeck.JPG" alt="Tape Deck">
         <canvas id="spoolCanvas"></canvas>
 
         <div class="effect-button-container">
-            <button class="button" id="effect-1-Button">Vinyl Crackle</button>
-            <button class="button" id="effect-2-Button">Gramaphone Effect</button>
-            <button class="button" id="effect-3-Button">Echo</button>
-          </div>
+          <button class="button" id="effect-1-Button">Vinyl<br>Crackle</button>
+          <button class="button" id="effect-2-Button">Gramaphone<br>Effect</button>
+          <button class="button" id="effect-3-Button">Echo</button>
+        </div>
 
         <div class="button-container">
           <button class="button" id="recordButton">Record</button>
@@ -320,31 +432,10 @@
         </div>
       </div>
     </div>
-
-    <div class="controls-container">
-      <div class="playback-timer-container">
-        <select id="playbackSpeedSelector" class="speed-selector">
-          <option value="0.8">33 RPM</option>
-          <option value="1" selected>Normal Speed</option>
-          <option value="1.2">45 RPM</option>
-        </select>
-        <div id="timerDisplay">00:00 / 02:36</div>
-      </div>
-               <!-- Add Volume Controls -->
-               <div class="volume-controls-container">
-                <label for="masterVolumeSlider">Master Volume</label>
-                <input
-                  type="range"
-                  id="masterVolumeSlider"
-                  min="0"
-                  max="1"
-                  step="0.01"
-                  value="1"
-                  aria-label="Master Volume Slider"
-                />
-              </div>
-    </div>
   </div>
+
+  <!-- Right Column (Empty) -->
+  <div class="right-column"></div>
 
   <script type="module" src="modules_v2/uiModules/UIManager.js"></script>
 </body>
