--- a/FRNK Player V3/index_5.html
+++ b/FRNK Player V3/index_5.html
@@ -299,6 +299,60 @@
         padding: 0.3em 0.6em;
       }
     }
+     /* New Styles for Song Selector and Display */
+     .song-selector-container {
+      width: 100%;
+      margin-top: 20px;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 1em;
+      border-radius: 8px;
+      border: 2px solid #00ffcc;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .song-selector-container h3 {
+      color: #00ffcc;
+      font-size: 1.2rem;
+      margin-bottom: 10px;
+      text-align: center;
+    }
+
+    #songSelector {
+      padding: 0.5em 1em;
+      font-size: 1rem;
+      border: none;
+      border-radius: 5px;
+      background: rgba(255, 255, 255, 0.1);
+      color: white;
+      cursor: pointer;
+      width: 100%;
+    }
+
+    #currentSongDisplay {
+      color: white;
+      font-size: 1rem;
+      margin-top: 10px;
+    }
+
+    /* Responsive Adjustments for New Elements */
+    @media (max-width: 768px) {
+      /* Existing responsive styles ... */
+
+      #songSelector {
+        font-size: 0.9rem;
+      }
+
+      .song-selector-container h3 {
+        font-size: 1rem;
+      }
+
+      #currentSongDisplay {
+        font-size: 0.9rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -326,6 +380,16 @@
           aria-label="Master Volume Slider"
         />
       </div>
+    </div>
+
+    <!-- New Song Selector Container -->
+    <div class="song-selector-container">
+        <h3>Select Song</h3>
+        <select id="songSelector">
+        <option value="song_1" selected>Song 1</option>
+        <option value="song_2">Song 2</option>
+        </select>
+        <div id="currentSongDisplay">Current Song: Song 1</div>
     </div>
   </div>
 
