--- a/FRNK Player V3/index_5.html
+++ b/FRNK Player V3/index_5.html
@@ -386,8 +386,8 @@
     <div class="song-selector-container">
         <h3>Select Song</h3>
         <select id="songSelector">
-        <option value="song_1" selected>Song 1</option>
-        <option value="song_2">Song 2</option>
+        <option value="song_1" selected>Amy (Part 1)</option>
+        <option value="song_2">Better</option>
         </select>
         <div id="currentSongDisplay">Current Song: Song 1</div>
     </div>
